Remove gradle.properties; try something else