@@ -48,3 +48,19 @@ repositories {
 }
 
 build.dependsOn buildZip
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += [
+            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+            // Add more --add-opens options as needed
+    ]
+}
+
+tasks.withType(Test) {
+    jvmArgs += [
+            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+            // Add more --add-opens options as needed
+    ]
+}
